Added data labeling tool

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -161,10 +161,10 @@ include_directories(
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
  catkin_install_python(PROGRAMS
-   src/evaluate.py
    src/roi_config.py
    src/data_collection.py
    src/import_test.py
+   src/data_labeler.py
    DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
  )
 
